# rpi_peripherals

./: Cargo.toml  command.sh  i2c_sequence.md
.cargo/: config.toml
src/: main.rs
