[package]
name = "rpi_peripherals"
version = "0.1.0"
edition = "2021"
license = "MIT"
categories = ["embedded", "hardware-support"]

[dependencies]
rppal = { version = "0.22.1", features = ["embedded-hal"] }
embedded-hal = "1.0.0"

[target.armv7-unknown-linux-gnueabihf]
rppal = { version = "0.22.1", features = ["embedded-hal"] }
